# golf_robot_ros

./: .gitignore  README.md
ball_detector/: package.xml  setup.py
ball_detector/ball_detector/: ball_detector.py
ball_detector/launch/: ball_detector.launch.py
code_test/: best.pt  best_2.pt  cam2_detect_size.py  camera_test.py  pole_tracker_node.py  pyrhon_serial.py  sende_cmd.py
example_2/bringup/config/: diffbot_controllers.yaml
example_2/bringup/launch/: diffbot.launch.py
example_2/description/ros2_control/: diffbot.ros2_control.xacro
example_2/hardware/: diffbot_system.cpp
example_2/hardware/include/ros2_control_demo_example_2/: diffbot_system.hpp
golf_robot_control/: package.xml  setup.cfg  setup.py
golf_robot_control/golf_robot_control/: ball_follow_node.py
golf_robot_control/launch/: ball_follow_launch.py
my_robot_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
my_robot_hardware/config/: diff_drive_controller.yaml  my_robot_hardware_params.yaml
my_robot_hardware/include/my_robot_hardware/: my_robot_system.hpp
my_robot_hardware/launch/: robot_control.launch.py
my_robot_hardware/src/: my_robot_system.cpp
my_robot_hardware/urdf/: my_robot_hardware.urdf
my_teleop_robot/: package.xml  setup.cfg  setup.py
my_teleop_robot/my_teleop_robot/: teleop_node.py
pole_tracker/: package.xml  setup.cfg  setup.py
pole_tracker/launch/: pole_tracker.launch.py
pole_tracker/pole_tracker/: pole_tracker.py
robot_diff_control/: package.xml  setup.cfg  setup.py
robot_diff_control/config/: ros2_control.yaml
robot_diff_control/robot_diff_control/: diff_cmd_bridge.py
robot_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
ros2_control_demos/: package.xml
wheel_serial_bridge/: package.xml  setup.py
wheel_serial_bridge/launch/: wheel_serial_bridge_launch.py
wheel_serial_bridge/wheel_serial_bridge/: bridge_node.py
ydlidar_ros2_ws/src/ydlidar_ros2_driver/launch/: Tmini_launch.py
ydlidar_ros2_ws/src/ydlidar_ros2_driver/params/: Tmini.yaml
yolo_ws/src/package/yolo_detect/: package.xml  setup.py
yolo_ws/src/package/yolo_detect/ONNX-YOLOv8-Object-Detection-main/: .webcam_ball_detection.py.swp  webcam_ball_detection.py
yolo_ws/src/package/yolo_detect/launch/: sub.launch.xml
yolo_ws/src/package/yolo_detect/yolo_detect/: publish.py  webcam_object_detection.py
yolo_ws/src/package/yolo_detect/yolo_detect/yolov8/: utils.py
