<?xml version="1.0"?>
<package format="3">
  <name>golf_robot_control</name>
  <version>0.1.0</version>
  <description>Control robot to follow the ball and kick it.</description>
  <maintainer email="ibuki@example.com">Ibuki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
