<?xml version="1.0"?>
<package format="3">
  <name>my_robot_hardware</name>
  <version>0.1.0</version>
  <description>
    Hardware interface for a differential drive robot with kick velocity support.
    Works with ros2_control and diff_drive_controller.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_interface</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <!-- Export plugin description -->
  <export>
    <hardware_interface plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
